# fcc_tools

./: .gitignore  AUTHORS  INSTRUCTIONS  Makefile.am  Makefile.in  README.md  autotoolize.sh  configure  configure.ac  fix_time_stamps.sh  run_test.sh
doc/: fcc_analyzer_PyQt4_man.tex  fcc_analyzer_PyQt5_man.tex  fcc_analyzer_man.tex  fcc_tools_man.tex
doc/figs/fig_src/: fcc_analyzer_screeshot.xcf
generators/: Makefile.am  Makefile.in  MakefileGen  gen_fcc_dipfile.f90  gen_fcc_state.f90
modules/: constants.f90  fcc_basics.f90  line_preprocess.f90  vibrational_analysis.f90
modules/io/: cfour_manage.f90  cp2k_manage.f90  fcc_io.f90  gaussian_manage.f90  gmx_manage.f90  molcas_manage.f90  molcasgradient.f90  molden_manage.f90  molpro_manage.f90  orca_manage.f90  turbomol_manage.f90
modules/maths/: dft.f90  fft.f90  fftw.f90  general_math.f90  matrix.f90  matrix_print.f90
postprocessing/: Makefile.am  Makefile.in  addconvolution.f90  addconvolution_RR.f90  convolute_RR.f90  excitation_RR.f90  reconvolute_TD.f90  reconvolute_TI.f90
python/: Makefile.am  Makefile.in  fcc_RRinspector_PyQt5.py  fcc_analyzer.py  fcc_analyzer_PyQt4.py  fcc_analyzer_PyQt5.py  fort.18  fort.21  get_git_version.sh  sum_spectra.py
src/dipfile_generator/: Makefile.am  gen_fcc_dipfile.f90
src/generators/: Makefile.am  Makefile.in  gen_fcc_dipfile.f90  gen_fcc_state.f90  get_git_version.sh
src/modules/: MatrixMod_red.f90  alerts.f90  constants.f90  constants_mod.f90  fcc_basics.f90  fcc_io.f90  fcc_manage.f90  gamess_manage.f90  gaussian_manage.f90  gmx_manage.f90  gro_manage.f90  line_preprocess.f90  molcas_manage.f90  molpro_manage.f90  orca_manage.f90  psi4_manage.f90  qchem_manage.f90  turbomol_manage.f90  verbosity.f90  vibrational_analysis.f90
src/state_generator/: Makefile.am  Makefile_simple  gen_fcc_state.f90
tests/: HQ_gamess.out  HQ_orca.hess  Makefile.am  Makefile.in  azabenz-ccl4-s2-neq-fr.fchk  carb_root03_cut.fchk  diacetylene.fchk  fcc_template.inp  h2o_molpro.out  h2o_psi4.out  naphthol-s1_qchem.out  s-methyloxirane_gs_aug.out  s0_mq-GP_edit.UnSym
